force-app/main/default/objects/Non_Torc_Payment__c/Non_Torc_Payment__c.object-meta.xml
<CustomObject>
    <label>Non Torc Payment</label>
    <nameField>
        <label>Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Non Torc Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>