force-app/main/default/objects/Non_Torc_Payment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Non Torc Payments</relationshipLabel>
    <relationshipName>Non_Torc_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>