force-app/main/default/objects/Non_Torc_Payment__c/fields/Bank_Fee__c.field-meta.xml
<CustomField>
    <fullName>Bank_Fee__c</fullName>
    <label>Bank Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>