force-app/main/default/objects/Non_Torc_Payment__c/fields/For_Month__c.field-meta.xml
<CustomField>
    <fullName>For_Month__c</fullName>
    <label>For Month</label>
    <type>Date</type>
</CustomField>