force-app/main/default/objects/Non_Torc_Payment__c/fields/Friendly_Name__c.field-meta.xml
<CustomField>
    <fullName>Friendly_Name__c</fullName>
    <formula>Non_Torc_User__r.Given_Name__c +&apos; &apos;+ Non_Torc_User__r.Family_Name__c+&apos; &apos;+
TEXT(MONTH( For_Month__c))+&apos;/&apos;+ TEXT(YEAR(For_Month__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Friendly Name</label>
    <type>Text</type>
</CustomField>