force-app/main/default/objects/Non_Torc_Payment__c/fields/Monthly_Expense__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Expense__c</fullName>
    <label>Monthly Expense</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>