force-app/main/default/objects/Non_Torc_Payment__c/fields/Non_Torc_User__c.field-meta.xml
<CustomField>
    <fullName>Non_Torc_User__c</fullName>
    <label>Non Torc User</label>
    <referenceTo>Non_Torc_User__c</referenceTo>
    <relationshipLabel>Non Torc Payments</relationshipLabel>
    <relationshipName>Non_Torc_Payments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>