force-app/main/default/objects/Non_Torc_Payment__c/fields/Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Non Torc Payments</relationshipLabel>
    <relationshipName>Non_Torc_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>