force-app/main/default/objects/Non_Torc_Payment__c/fields/Payment_Created__c.field-meta.xml
<CustomField>
    <fullName>Payment_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Created</label>
    <type>Checkbox</type>
</CustomField>