force-app/main/default/objects/Non_Torc_Payment__c/fields/Talent_UserName__c.field-meta.xml
<CustomField>
    <fullName>Talent_UserName__c</fullName>
    <formula>Non_Torc_User__r.Official_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Talent UserName</label>
    <type>Text</type>
</CustomField>