force-app/main/default/objects/Non_Torc_Payment__c/fields/Torc_Fee__c.field-meta.xml
<CustomField>
    <fullName>Torc_Fee__c</fullName>
    <label>Torc Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>